mb before rebase conflicts

--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <!--
 	Copyright 2014 Git. Trainning
+	Adding changes before rebasing confilcts
 -->
 <head>
 	<title>A Very Respectfull Website</title>
